src/test/testData/parser/good/StatementCommand.basic
ZStandard
Output(1,1,"TEST"
Fix 9
setTime(2025,1,1)