src/test/testData/parser/bad/StatementCommand.basic
Output
setTime(
Line(1,